--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <script src="./lesson-01/02.js"></script>
     <script src="./lesson-01/03.js"></script>
+    <script src="./lesson-01/04.js"></script>
     <script src="./lesson-02/01.js"></script>
     <script src="./lesson-03/01.js"></script>
     <script src="./lesson-04/01.js"></script>
