--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./lesson-01/07.js"></script>
     
     <script src="./lesson-02/01.js"></script>
+    <script src="./lesson-02/02.js"></script>
     <script src="./lesson-03/01.js"></script>
     <script src="./lesson-04/01.js"></script>
   </body>
