--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     
     <script src="./lesson-02/01.js"></script>
     <script src="./lesson-02/02.js"></script>
+    <script src="./lesson-02/03.js"></script>
+
     <script src="./lesson-03/01.js"></script>
     <script src="./lesson-04/01.js"></script>
   </body>
