--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./lesson-02/03.js"></script>
     <script src="./lesson-02/04.js"></script>
     <script src="./lesson-02/05.js"></script>
+    <script src="./lesson-02/06.js"></script>
 
     <script src="./lesson-03/01.js"></script>
     <script src="./lesson-04/01.js"></script>
