--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="./lesson-02/07.js"></script>
 
     <script src="./lesson-03/01.js"></script>
+    <script src="./lesson-03/02.js"></script>
     <script src="./lesson-04/01.js"></script>
   </body>
 </html>
