--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <script src="./lesson-03/01.js"></script>
     <script src="./lesson-03/02.js"></script>
+    <script src="./lesson-03/03.js"></script>
+
     <script src="./lesson-04/01.js"></script>
   </body>
 </html>
